# backend/src/routes/index.ts
@@ -3,6 +3,7 @@ import usersRoutes from "./users.routes";
 import storeRoutes from "./store.routes";
 import plansRoutes from "./plans.routes";
 import swaggerRoutes from "./swagger.routes";
+import superadminRoutes from "./superadmin.routes";
 
 const router = Router();
 
@@ -11,6 +12,9 @@ router.use("/docs", swaggerRoutes);
 
 // User & Auth routes
 router.use("/users", usersRoutes);
+
+// SuperAdmin routes (platform only)
+router.use("/superadmin", superadminRoutes);
 
 // Store routes (public)
 router.use("/store", storeRoutes);
